# jumanpp-t9

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: conll2minicorpus.py  conll2t9corpus.py  minicorpus2minidic.py  t9corupus2dic.py  tester.py  train.sh
src/: CMakeLists.txt  jumanpp_t9.cc  jumanpp_t9.spec  jumanpp_t9_mini.spec  jumanpp_t9_nano.spec  jumanpp_t9_static.cc
